# pytest-fold

./: .gitignore  .travis.yml  README.md  README.rst  RELEASE_INSTRUCTIONS  conftest.py  mkdocs.yml  out.txt  pyproject.toml  pytest.ini  pytest_fold.py  requirements.txt  setup.py  test_fold.py  tox.ini  tree.txt  tui.py  tui_asciimatics.py
docs/: index.md
output_files_to_analyze/: output.ansi  output2.ansi  outputfulltrace.ansi  outputfulltracefold.ansi  outputnoheader.ansi  outputnoheaderfold.ansi  outputshowlocals.ansi  outputshowlocalsfold.ansi  outputtblinefold.ansi  outputtblong.ansi  outputtblongfold.ansi  outputtbnative.ansi  outputtbnativefold.ansi  outputtbno.ansi  outputtbshort.ansi  outputtbshortfold.ansi  outputv.ansi  outputvfold.ansi  outputvv.ansi  outputvvfold.ansi
pytest_fold/: conftest.py  conftest.py.remove  invoke.py  lorem.py  observations  output.ansi  pickle.py  plugin.py  pytest_fold.py  tui-textual.py  tui.py  tui2.py  tui5a.py  tui6.py  tui_asciimatics.py  tui_pytermtk.py  tui_rich_pynput.py  tui_textual.py  tui_textual1.py  tui_textual2.py  tui_tk_test.py  tuia.py  tuit.py  tuit2.py  tuit_new.py  tuitk.py  utils.py
stuff/: 2FLQ.txt  conftest.py.bak  investigation.py  lpmpmessage.py  notes  observations.md  pytest_output  pytest_output_narrow  pytest_output_wide
tests/: conftest.py  test_capture.py  test_fold.py  test_pytest_fold.py  test_pytest_fold_1.py  test_pytest_fold_2.py  test_pytest_fold_warning.py  test_show_warnings.py  test_small.py  test_something.py
tuis/: tui.py  tui3.py  tui4.py  tui5.py  tui6.py  tui_rich_pynput.py  (+1 more)
(+1 files in other folders)
