[tool.poetry]
name = "pytest-fold"
version = "0..0"
description = "A Pytest plugin to make console output more manageable"
authors = ["Jeffrey Wright <jeffrey.wright@wartsila.com>"]
repository = "https://github.com/jeffwright13/pytest_fold/"
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-html = "^3.1"
pytest-cov = "^2.12"
pytest-black = "^0.3.12"
black = "^21.5b2"
pylint = "^2.8.3"
pyflakes = "^2.3.1"
ipython = "^7.31.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
